InstantMessagingRemote initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /MessageWall_exercise/build/
 /InstantMessagingLocal_exercise/build/
+/3_InstantMessaging_exercise/InstantMessagingRemote/InstantMessagingRemote_client_exercise/build/
